external-crates/move/crates/move-compiler/tests/move_2024/parser/type_kewyord.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/type_kewyord.move:2:5
  │
2 │     struct type<T> { t: T }
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/type_kewyord.move:2:12
  │
2 │     struct type<T> { t: T }
  │            ^^^^
  │            │
  │            Unexpected 'type'
  │            Expected an identifier
